# ffmpeg_study

./: 01_demux.c  02_demux-mp4.c  03_extract-aac.c  04_extract-h264.c  05_decode_audio.c  06_decode_video.c  07_avio_decode_audio.c  08_audio_resample.c  09_encode_audio.c  10_encode_video.c  11_muxing_flv.c  12_hw-decode.c  13_decode_h265.c  14_encode_h265.c  15_encode_video_libx264_nvenc.c  16_video-watermark.c  CMakeLists.txt  README.md  build.sh  ffmpeh6.0
12_mp4muxer/: audioencoder.cpp  audioencoder.h  main.cpp  muxer.cpp  muxer.h  videoencoder.cpp  videoencoder.h
